<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/homeImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/harbor"
        android:scaleType = "centerCrop"
        android:contentDescription="@string/background_desc" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoprofil"
        android:id="@+id/gotoprofilbt"
        android:textColor="#060C80"
        android:background="#9EFEFFFF"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/button_profile_desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotostats"
        android:id="@+id/gotostatsbt"
        android:textColor="#060C80"
        android:background="#9EFEFFFF"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/button_stats_desc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotogame"
        android:id="@+id/gotogamebt"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#910101"
        android:background="#8042B8BD"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/button_game_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:text="@string/copyright"
        android:contentDescription="@string/copyright_desc"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        >
    </TextView>

</RelativeLayout>