<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_name"
        android:enabled="true"
        android:title="@string/sort_name"
        android:visible="true" />
    <item
        android:id="@+id/sort_date"
        android:enabled="true"
        android:title="@string/sort_date"
        android:visible="true" />
    <item
        android:id="@+id/sort_level"
        android:enabled="true"
        android:title="@string/sort_level"
        android:visible="true" />
    <item
        android:id="@+id/sort_parked"
        android:enabled="true"
        android:title="@string/sort_parked"
        android:visible="true" />
    <item
        android:id="@+id/sort_time"
        android:enabled="true"
        android:title="@string/sort_time"
        android:visible="true" />
</menu>